[package]
name = "tgm"
version = "0.10.0"
edition = "2021"
authors = ["linux_china <libing.chen@gmail.com>"]
description = "CLI to manage template repositories"
keywords = ["template", "generator"]
categories = ["command-line-utilities"]
documentation = "https://github.com/linux-china/tgm"
readme = "README.md"
homepage = "https://github.com/linux-china/tgm"
repository = "https://github.com/linux-china/tgm"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "2"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
clap = "3.0.0"
clap_complete = "3.0.0"
chrono = "0.4"
regex = "1"

