[package]
name = "tgm"
version = "0.10.0"
edition = "2021"
authors = ["linux_china <libing.chen@gmail.com>"]
description = "CLI to manage template repositories"
keywords = ["template", "generator"]
categories = ["command-line-utilities"]
documentation = "https://github.com/linux-china/tgm"
readme = "README.md"
homepage = "https://github.com/linux-china/tgm"
repository = "https://github.com/linux-china/tgm"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "2"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["blocking", "json"] }
clap = "4"
clap_complete = "4"
chrono = "0.4"
regex = "1"

[profile.release]
strip = true
lto = true
opt-level = "z"
codegen-units = 1
panic = "abort"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = true

# Config for 'dist'
[workspace.metadata.dist]
# The preferred dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.29.0"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["homebrew"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]

